--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,6 +1,68 @@
-#main-container {
-    height: 100vh;
+#app-container {
+    margin-top: 15vh;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    align-items: center;
+}
+
+h1 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 80px;
+    margin-bottom: 30px;
+    text-align: center;
+    color: white;
+}
+
+hr {
+    width: 50%;
+    color: white;
+}
+
+#status-container {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+}
+
+#status-container div {
+    border: 1px solid white;
+    font-family: "Montserrat", sans-serif;
+}
+
+#work {
+    padding: 7px 35px;
+}
+
+#look-away {
+    padding: 7px 25px;
+}
+
+#timer-text {
+    margin-top: 60px;
+    font-size: 80px;
+    font-weight: bold;
+    color: white;
+    font-family: "Montserrat", sans-serif;
+}
+
+button {
+    margin-top: 50px;
+    border: 2px solid white;
+    font-size: 25px;
+    padding: 10px 40px;
+    font-family: "Montserrat", sans-serif;
+    border-radius: 5px;
+}
+
+#footer {
+    margin-top: 10px;
+}
+
+a:visited {
+    color: white;
+}
+
+a:link {
+    color: white;
 }
