--- a/src/components/StatusBar/StatusBar.css
+++ b/src/components/StatusBar/StatusBar.css
@@ -1,4 +1,5 @@
 #status-container {
+    margin-top: 20px;
     border: 1px solid white;
     font-family: "Montserrat", sans-serif;
     display: flex;
