--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,8 @@
     align-items: center;
     height: 10vh;
     background-color: #5DC0DB;
+    position: fixed;
+    width: 100vw;
 }
 
 #header p {
