implement media queries for home page

--- a/src/components/StatusBar/StatusBar.css
+++ b/src/components/StatusBar/StatusBar.css
@@ -18,3 +18,9 @@
 #look-away {
     padding: 7px 25px;
 }
+
+@media (max-width: 768px) {
+    #status-container div p {
+        font-size: 12px;
+    }
+}
